--- a/css/site.css
+++ b/css/site.css
@@ -18,7 +18,7 @@ html, body {
   clear:both;
   padding-top:0px;
   background-color:#CF8300;
-} 
+}
 body {
     text-align:center;
 }
@@ -27,6 +27,9 @@ th {
 }
 .unverified {
 	border: 3px solid #FF5252;
+}
+.input-group-addon {
+  width:auto;
 }
 
 /* td, th {
