Change entire parts row to be clickable instead of one link
Closes #24

--- a/css/site.css
+++ b/css/site.css
@@ -32,3 +32,10 @@ th {
 .input-group-addon {
   width: auto;
 }
+
+.clickable-row {
+  cursor:pointer;
+}
+.click-indicator {
+  text-decoration: underline;
+}
