Make login form prettier
Change to flexbox. Now centered and more responsive.

--- a/css/site.css
+++ b/css/site.css
@@ -39,3 +39,12 @@ th {
 .click-indicator {
   text-decoration: underline;
 }
+
+#login-form {
+  display: flex;
+  flex-direction: column;
+}
+#login-form .form-group {
+  margin: auto;
+  max-width: 35em;
+}
